fix(ui): make app layout more maintainable and prevent ui shifts
- prevent navbar from changing size
- set remove gap from layout group. Outlet component now controls spacing.

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,6 +4,7 @@
   width: 15rem;
   display: flex;
   flex-direction: column;
+  flex: 0 0 auto;
   transition: width 0.5s ease;
   border-radius: 0 var(--mantine-radius-lg) var(--mantine-radius-lg) 0;
 }
